# DeWordle

./: README.md  package.json
.github/workflows/: advisory-triage.yml  ci.yml  compile-release-notes.yml  reviewer-load-heatmap.yml  soroban-foundation.yml  stale-branch-warning.yml  toolchain-check.yml
backend/: package.json  tsconfig.json
backend/scripts/: jest-no-watchman.ts
docs/: DEVELOPMENT.md
docs/wave/: REVIEWER_LOAD_HEATMAP.md  (+7 more)
frontend/: package-lock.json
scripts/: compile-release-notes.js  compile-release-notes.test.js  reviewer-load-heatmap.js  reviewer-load-heatmap.test.js
soroban/: Cargo.toml  README.md
soroban/config/: contracts.mainnet.json  contracts.testnet.json
soroban/contracts/achievements/: Cargo.toml
soroban/contracts/achievements/src/: lib.rs
soroban/contracts/admin_registry/: Cargo.toml
soroban/contracts/admin_registry/src/: lib.rs
soroban/contracts/core_game/: Cargo.toml
soroban/contracts/core_game/src/: lib.rs
soroban/contracts/rewards/: Cargo.toml
soroban/contracts/rewards/src/: lib.rs
soroban/crates/dewordle-auth/: Cargo.toml
soroban/crates/dewordle-auth/src/: lib.rs
soroban/crates/dewordle-types/: Cargo.toml
soroban/crates/dewordle-types/src/: lib.rs
soroban/crates/dewordle-utils/: Cargo.toml
soroban/crates/dewordle-utils/src/: lib.rs
soroban/scripts/: README.md
soroban/scripts/deploy/: deploy-testnet.sh
soroban/scripts/invoke/: invoke-core-game.sh
soroban/sdk/ts/: core-game-client.ts  events.ts  index.ts  network.ts  package.json  tx-builder.ts  types.ts
soroban/tests/integration/: README.md
(+14 files in other folders)
